data/derived/sp14/progs/unify/prog0089.ml.out
Characters 385-401:
  | Cube a -> (exprToString a) * (exprToString a) *(exprToString a);;
              ^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
